[gd_scene load_steps=23 format=3 uid="uid://de2hhpq7sv1lp"]

[ext_resource type="Texture2D" uid="uid://bnfh4xgdwx3ln" path="res://Assets/Character/jelly_person.png" id="1_deddm"]
[ext_resource type="Script" path="res://Scenes/Characters/jelly_person.gd" id="1_untd8"]
[ext_resource type="Texture2D" uid="uid://bg2wf76twa3la" path="res://Assets/Character/jelly_outline.png" id="2_ilt62"]
[ext_resource type="Texture2D" uid="uid://x2mv2qamvuqt" path="res://Assets/Character/all_mods_combined.png" id="3_35efr"]
[ext_resource type="AnimationLibrary" uid="uid://3ifohkiof5dh" path="res://modifiers.res" id="4_kvpt4"]
[ext_resource type="Texture2D" uid="uid://p10xfx3p04fi" path="res://Assets/Character/jelly_outline_selected.png" id="4_u3wws"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="5_qbhc0"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="6_jnron"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="7_y1qqi"]
[ext_resource type="Script" path="res://addons/godot_state_charts/animation_player_state.gd" id="8_3sde6"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="9_grl81"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="10_r80jp"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="13_5ouki"]
[ext_resource type="Script" path="res://Scenes/Characters/jelly_person_area.gd" id="13_bvehs"]

[sub_resource type="Animation" id="Animation_7b0a3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1.56088)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_apyt0"]
resource_name = "hover"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1.03526, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 10), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0]
}

[sub_resource type="Animation" id="Animation_d25s7"]
resource_name = "move"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.466667, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.261799, 0.261799, 0.261799]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.466667, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 1.56088), Vector2(0, -5), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_bpc5y"]
resource_name = "move_left"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.466667, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.261799, -0.261799, -0.261799]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.466667, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 1.56088), Vector2(0, -5), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_cfvpr"]
resource_name = "training"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.766667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.57583, 3.14159, 4.71239, 6.26573]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u5php"]
_data = {
"RESET": SubResource("Animation_7b0a3"),
"hover": SubResource("Animation_apyt0"),
"move": SubResource("Animation_d25s7"),
"move_left": SubResource("Animation_bpc5y"),
"training": SubResource("Animation_cfvpr")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2mwcl"]
radius = 19.0
height = 98.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7j1wh"]
radius = 208.591

[node name="JellyPerson" type="CharacterBody2D"]
scale = Vector2(0.4, 0.4)
collision_layer = 8
collision_mask = 7
input_pickable = true
motion_mode = 1
script = ExtResource("1_untd8")
character_class = 4

[node name="JellyPersonBody" type="Sprite2D" parent="."]
position = Vector2(0, 1.56088)
scale = Vector2(0.199219, 0.199219)
texture = ExtResource("1_deddm")

[node name="JellyOutline" type="Sprite2D" parent="JellyPersonBody"]
unique_name_in_owner = true
visible = false
show_behind_parent = true
position = Vector2(0, -7.835)
scale = Vector2(0.998901, 0.998901)
texture = ExtResource("2_ilt62")

[node name="JellyOutlineSelected" type="Sprite2D" parent="JellyPersonBody"]
visible = false
show_behind_parent = true
texture = ExtResource("4_u3wws")

[node name="AnimationPlayer" type="AnimationPlayer" parent="JellyPersonBody"]
root_node = NodePath(".")
libraries = {
"": SubResource("AnimationLibrary_u5php")
}
autoplay = "hover"

[node name="modifier" type="Sprite2D" parent="JellyPersonBody"]
texture = ExtResource("3_35efr")
hframes = 2
vframes = 5
frame = 6

[node name="ModifierAnimations" type="AnimationPlayer" parent="JellyPersonBody/modifier"]
libraries = {
"animations": ExtResource("4_kvpt4")
}
autoplay = "animations/1_modifier"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
shape = SubResource("CapsuleShape2D_2mwcl")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("5_qbhc0")

[node name="ParallelState" type="Node" parent="StateChart"]
script = ExtResource("6_jnron")

[node name="movement" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("7_y1qqi")
initial_state = NodePath("hover")

[node name="hover" type="Node" parent="StateChart/ParallelState/movement"]
script = ExtResource("8_3sde6")
animation_player = NodePath("../../../../JellyPersonBody/AnimationPlayer")
animation_name = &"hover"

[node name="trans_move_right" type="Node" parent="StateChart/ParallelState/movement/hover"]
script = ExtResource("9_grl81")
to = NodePath("../../move_right")
event = &"move_right"
delay_in_seconds = "0.0"

[node name="trans_move_left" type="Node" parent="StateChart/ParallelState/movement/hover"]
script = ExtResource("9_grl81")
to = NodePath("../../move_left")
event = &"move_left"
delay_in_seconds = "0.0"

[node name="trans_training" type="Node" parent="StateChart/ParallelState/movement/hover"]
script = ExtResource("9_grl81")
to = NodePath("../../training")
event = &"start_training"
delay_in_seconds = "0.0"

[node name="move_right" type="Node" parent="StateChart/ParallelState/movement"]
script = ExtResource("8_3sde6")
animation_player = NodePath("../../../../JellyPersonBody/AnimationPlayer")
animation_name = &"move"

[node name="Transition" type="Node" parent="StateChart/ParallelState/movement/move_right"]
script = ExtResource("9_grl81")
to = NodePath("../../hover")
event = &"idle"
delay_in_seconds = "0.0"

[node name="trans_move_left" type="Node" parent="StateChart/ParallelState/movement/move_right"]
script = ExtResource("9_grl81")
to = NodePath("../../move_left")
event = &"move_left"
delay_in_seconds = "0.0"

[node name="trans_training" type="Node" parent="StateChart/ParallelState/movement/move_right"]
script = ExtResource("9_grl81")
to = NodePath("../../training")
event = &"start_training"
delay_in_seconds = "0.0"

[node name="move_left" type="Node" parent="StateChart/ParallelState/movement"]
script = ExtResource("8_3sde6")
animation_player = NodePath("../../../../JellyPersonBody/AnimationPlayer")
animation_name = &"move_left"

[node name="Transition" type="Node" parent="StateChart/ParallelState/movement/move_left"]
script = ExtResource("9_grl81")
to = NodePath("../../hover")
event = &"idle"
delay_in_seconds = "0.0"

[node name="trans_move_right" type="Node" parent="StateChart/ParallelState/movement/move_left"]
script = ExtResource("9_grl81")
to = NodePath("../../move_right")
event = &"move_right"
delay_in_seconds = "0.0"

[node name="trans_training" type="Node" parent="StateChart/ParallelState/movement/move_left"]
script = ExtResource("9_grl81")
to = NodePath("../../training")
event = &"start_training"
delay_in_seconds = "0.0"

[node name="training" type="Node" parent="StateChart/ParallelState/movement"]
script = ExtResource("8_3sde6")
animation_player = NodePath("../../../../JellyPersonBody/AnimationPlayer")
animation_name = &"training"

[node name="Transition" type="Node" parent="StateChart/ParallelState/movement/training"]
script = ExtResource("9_grl81")
to = NodePath("../../hover")
event = &"training_finished"
delay_in_seconds = "1"

[node name="modifier_states" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("7_y1qqi")
initial_state = NodePath("default")

[node name="default" type="Node" parent="StateChart/ParallelState/modifier_states"]
script = ExtResource("8_3sde6")
animation_player = NodePath("../../../../JellyPersonBody/modifier/ModifierAnimations")
animation_name = &"animations/1_modifier"

[node name="to_science" type="Node" parent="StateChart/ParallelState/modifier_states/default"]
script = ExtResource("9_grl81")
to = NodePath("../../scientist")
event = &"become_scientist"
delay_in_seconds = "0.0"

[node name="to_com" type="Node" parent="StateChart/ParallelState/modifier_states/default"]
script = ExtResource("9_grl81")
to = NodePath("../../communicator")
event = &"become_communicator"
delay_in_seconds = "0.0"

[node name="to_engineer" type="Node" parent="StateChart/ParallelState/modifier_states/default"]
script = ExtResource("9_grl81")
to = NodePath("../../engineer")
event = &"become_engineer"
delay_in_seconds = "0.0"

[node name="to_farmer" type="Node" parent="StateChart/ParallelState/modifier_states/default"]
script = ExtResource("9_grl81")
to = NodePath("../../farmer")
event = &"become_farmer"
delay_in_seconds = "0.0"

[node name="communicator" type="Node" parent="StateChart/ParallelState/modifier_states"]
script = ExtResource("8_3sde6")
animation_player = NodePath("../../../../JellyPersonBody/modifier/ModifierAnimations")
animation_name = &"animations/Communicator_modifier"

[node name="to_science" type="Node" parent="StateChart/ParallelState/modifier_states/communicator"]
script = ExtResource("9_grl81")
to = NodePath("../../scientist")
event = &"become_scientist"
delay_in_seconds = "0.0"

[node name="to_engineer" type="Node" parent="StateChart/ParallelState/modifier_states/communicator"]
script = ExtResource("9_grl81")
to = NodePath("../../engineer")
event = &"become_engineer"
delay_in_seconds = "0.0"

[node name="to_farmer" type="Node" parent="StateChart/ParallelState/modifier_states/communicator"]
script = ExtResource("9_grl81")
to = NodePath("../../farmer")
event = &"become_farmer"
delay_in_seconds = "0.0"

[node name="engineer" type="Node" parent="StateChart/ParallelState/modifier_states"]
script = ExtResource("8_3sde6")
animation_player = NodePath("../../../../JellyPersonBody/modifier/ModifierAnimations")
animation_name = &"animations/Engineer_modifier"

[node name="to_com" type="Node" parent="StateChart/ParallelState/modifier_states/engineer"]
script = ExtResource("9_grl81")
to = NodePath("../../communicator")
event = &"become_communicator"
delay_in_seconds = "0.0"

[node name="to_science" type="Node" parent="StateChart/ParallelState/modifier_states/engineer"]
script = ExtResource("9_grl81")
to = NodePath("../../scientist")
event = &"become_scientist"
delay_in_seconds = "0.0"

[node name="to_farmer" type="Node" parent="StateChart/ParallelState/modifier_states/engineer"]
script = ExtResource("9_grl81")
to = NodePath("../../farmer")
event = &"become_farmer"
delay_in_seconds = "0.0"

[node name="farmer" type="Node" parent="StateChart/ParallelState/modifier_states"]
script = ExtResource("8_3sde6")
animation_player = NodePath("../../../../JellyPersonBody/modifier/ModifierAnimations")
animation_name = &"animations/Farmer_modifier"

[node name="to_com" type="Node" parent="StateChart/ParallelState/modifier_states/farmer"]
script = ExtResource("9_grl81")
to = NodePath("../../communicator")
event = &"become_communicator"
delay_in_seconds = "0.0"

[node name="to_science" type="Node" parent="StateChart/ParallelState/modifier_states/farmer"]
script = ExtResource("9_grl81")
to = NodePath("../../scientist")
event = &"become_scientist"
delay_in_seconds = "0.0"

[node name="to_engineer" type="Node" parent="StateChart/ParallelState/modifier_states/farmer"]
script = ExtResource("9_grl81")
to = NodePath("../../engineer")
event = &"become_engineer"
delay_in_seconds = "0.0"

[node name="scientist" type="Node" parent="StateChart/ParallelState/modifier_states"]
script = ExtResource("8_3sde6")
animation_player = NodePath("../../../../JellyPersonBody/modifier/ModifierAnimations")
animation_name = &"animations/Science_modifier"

[node name="to_com" type="Node" parent="StateChart/ParallelState/modifier_states/scientist"]
script = ExtResource("9_grl81")
to = NodePath("../../communicator")
event = &"become_communicator"
delay_in_seconds = "0.0"

[node name="to_engineer" type="Node" parent="StateChart/ParallelState/modifier_states/scientist"]
script = ExtResource("9_grl81")
to = NodePath("../../engineer")
event = &"become_engineer"
delay_in_seconds = "0.0"

[node name="to_farmer" type="Node" parent="StateChart/ParallelState/modifier_states/scientist"]
script = ExtResource("9_grl81")
to = NodePath("../../farmer")
event = &"become_farmer"
delay_in_seconds = "0.0"

[node name="training" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("7_y1qqi")
initial_state = NodePath("idle")

[node name="idle" type="Node" parent="StateChart/ParallelState/training"]
script = ExtResource("10_r80jp")

[node name="become_scientist" type="Node" parent="StateChart/ParallelState/training/idle"]
script = ExtResource("9_grl81")
to = NodePath("../../science_training")
event = &"Science_entered"
delay_in_seconds = "0.0"

[node name="become_farmer" type="Node" parent="StateChart/ParallelState/training/idle"]
script = ExtResource("9_grl81")
to = NodePath("../../farmer_training")
event = &"Farm_entered"
delay_in_seconds = "0.0"

[node name="become_engineer" type="Node" parent="StateChart/ParallelState/training/idle"]
script = ExtResource("9_grl81")
to = NodePath("../../engineer_training")
event = &"Mine_entered"
delay_in_seconds = "0.0"

[node name="become_communicator" type="Node" parent="StateChart/ParallelState/training/idle"]
script = ExtResource("9_grl81")
to = NodePath("../../comm_training")
event = &"Comms_entered"
delay_in_seconds = "0.0"

[node name="science_training" type="Node" parent="StateChart/ParallelState/training"]
script = ExtResource("10_r80jp")

[node name="finish_training" type="Node" parent="StateChart/ParallelState/training/science_training"]
script = ExtResource("9_grl81")
to = NodePath("../../idle")
event = &"training_finished"
delay_in_seconds = "0.0"

[node name="farmer_training" type="Node" parent="StateChart/ParallelState/training"]
script = ExtResource("10_r80jp")

[node name="finish_training" type="Node" parent="StateChart/ParallelState/training/farmer_training"]
script = ExtResource("9_grl81")
to = NodePath("../../idle")
event = &"training_finished"
delay_in_seconds = "0.0"

[node name="engineer_training" type="Node" parent="StateChart/ParallelState/training"]
script = ExtResource("10_r80jp")

[node name="finish_training" type="Node" parent="StateChart/ParallelState/training/engineer_training"]
script = ExtResource("9_grl81")
to = NodePath("../../idle")
event = &"training_finished"
delay_in_seconds = "0.0"

[node name="comm_training" type="Node" parent="StateChart/ParallelState/training"]
script = ExtResource("10_r80jp")

[node name="finish_training" type="Node" parent="StateChart/ParallelState/training/comm_training"]
script = ExtResource("9_grl81")
to = NodePath("../../idle")
event = &"training_finished"
delay_in_seconds = "0.0"

[node name="Selection" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("7_y1qqi")
initial_state = NodePath("Not_Selected")

[node name="Selected" type="Node" parent="StateChart/ParallelState/Selection"]
script = ExtResource("10_r80jp")

[node name="trans_not_select" type="Node" parent="StateChart/ParallelState/Selection/Selected"]
script = ExtResource("9_grl81")
to = NodePath("../../Not_Selected")
event = &"clicked_off"
delay_in_seconds = "0.0"

[node name="Not_Selected" type="Node" parent="StateChart/ParallelState/Selection"]
script = ExtResource("10_r80jp")

[node name="trans_select" type="Node" parent="StateChart/ParallelState/Selection/Not_Selected"]
script = ExtResource("9_grl81")
to = NodePath("../../Selected")
event = &"clicked_on"
delay_in_seconds = "0.0"

[node name="Area2D" type="Area2D" parent="."]
light_mask = 65536
visibility_layer = 65536
scale = Vector2(0.258454, 0.496974)
monitoring = false
monitorable = false
script = ExtResource("13_bvehs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_7j1wh")

[node name="StateChartDebugger" parent="." instance=ExtResource("13_5ouki")]
offset_left = 93.0
offset_top = -476.0
offset_right = 716.0
offset_bottom = 63.0
enabled = false
initial_node_to_watch = NodePath("../StateChart")

[node name="TrainingTimer" type="Timer" parent="."]

[connection signal="state_entered" from="StateChart/ParallelState/training/science_training" to="." method="_on_science_training_state_entered"]
[connection signal="state_entered" from="StateChart/ParallelState/training/farmer_training" to="." method="_on_farmer_training_state_entered"]
[connection signal="state_entered" from="StateChart/ParallelState/training/engineer_training" to="." method="_on_engineer_training_state_entered"]
[connection signal="state_entered" from="StateChart/ParallelState/training/comm_training" to="." method="_on_comm_training_state_entered"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_mouse_exited"]
